# CodegenIDE

./: .gitignore  README.md  README.md.clear  README.md.crypt  pom.xml  run.sh
.github/workflows/: package.yml
docs/: CodegenIDE.md  index.html  index.md  styles.css
src/main/java/: AIChatPanel.java  AboutDialog.java  AppSettings.java  CodegenApp.java  CodegenSyntaxHighlighter.java  CodegenTokenMaker.java  EditorPanel.java  FindReplaceDialog.java  LicenseDialog.java  PreviewPanel.java  SettingsDialog.java  SplashScreen.java  SwiftTokenMaker.java  TerminalPanel.java
src/main/resources/: Codegen.g4  Macrodef.g4  app_icon.icns  codegen_funcs.txt  doc_icon.icns
src/main/resources/utils/: Cargo.toml  Utils.hpp  Utils.js  Utils.pm  Utils.py  Utils.swift  utils.rs
utils/: Utils.swiftmodule  libUtils.dylib
