[package]
name = "CodegenIDE"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fstrings = "0.2.3"
regex = "1.9.4"
lazy_static = "1.4.0"
num_enum = "0.7.2"
utf8-decode = "1.0.1"
rand = "0.8"
rand_distr = "0.4"
